# late_chunking_embedding

./: .gitignore  README.md  pyproject.toml
late_chunking/: embedding.py  protocols.py
tests/: test_late_chunking_embedding.py
