[project]
name = "late_chunking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.49.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "einops>=0.8.1",
    "ipython>=8.34.0",
    "pytest>=8.3.5",
]
